@@ -39,7 +39,7 @@ CREATE TABLE `tl_module` (
   `iso_orderByFields` blob NULL,
   `iso_searchFields` blob NULL,
   `iso_enableLimit` char(1) NOT NULL default '',
-  `iso_listingModule` int(10) NOT NULL default '0',
+  `iso_listingModule` int(10) unsigned NOT NULL default '0',
   `iso_enableSearch` char(1) NOT NULL default '',
   `iso_cart_jumpTo` int(10) unsigned NOT NULL default '0',
   `iso_checkout_jumpTo` int(10) unsigned NOT NULL default '0',
@@ -222,6 +222,8 @@ CREATE TABLE `tl_iso_config` (
   `tstamp` int(10) unsigned NOT NULL default '0',
   `name` varchar(255) NOT NULL default '',
   `label` varchar(255) NOT NULL default '',
+  `fallback` char(1) NOT NULL default '',
+  `store_id` int(2) unsigned NOT NULL default '0',
   `priceCalculateFactor` varchar(10) NOT NULL default '',
   `priceCalculateMode` varchar(3) NOT NULL default '',
   `priceRoundPrecision` int(1) unsigned NOT NULL default '2',
@@ -232,11 +234,10 @@ CREATE TABLE `tl_iso_config` (
   `currencyPosition` varchar(5) NOT NULL default '',
   `currencySymbol` char(1) NOT NULL default '',
   `currencySpace` char(1) NOT NULL default '',
-  `orderPrefix` varchar(4) NOT NULL default '',
-  `store_id` int(2) unsigned NOT NULL default '0',
+  `orderPrefix` varchar(5) NOT NULL default '',
+  `orderDigits` int(1) unsigned NOT NULL default '4',
   `templateGroup` varchar(255) NOT NULL default '',
   `invoiceLogo` varchar(255) NOT NULL default '',
-  `fallback` char(1) NOT NULL default '',
   `company` varchar(255) NOT NULL default '',
   `firstname` varchar(255) NOT NULL default '',
   `lastname` varchar(255) NOT NULL default '',
